[Fix] 스크롤 이슈 해결 #37

--- a/Teamply/Teamply/Screen/Home/mainHome/Home.storyboard
+++ b/Teamply/Teamply/Screen/Home/mainHome/Home.storyboard
@@ -159,7 +159,7 @@
                                                     <action selector="addTeamProjectButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="9iD-8z-gha"/>
                                                 </connections>
                                             </button>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6xl-qr-6yP">
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6xl-qr-6yP">
                                                 <rect key="frame" x="0.0" y="521" width="390" height="149"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
