--- a/Teamply/Teamply/Screen/Box/Impression/Impression.storyboard
+++ b/Teamply/Teamply/Screen/Box/Impression/Impression.storyboard
@@ -25,6 +25,9 @@
                                 <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="back"/>
+                                <connections>
+                                    <action selector="backToBox:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="aMc-Jx-v6q"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ffc-3F-4L7">
                                 <rect key="frame" x="175.66666666666666" y="71" width="42" height="29"/>
