[Feat] 저장 버튼 추가 #46

--- a/Teamply/Teamply/Screen/Box/Impression/Impression.storyboard
+++ b/Teamply/Teamply/Screen/Box/Impression/Impression.storyboard
@@ -80,6 +80,17 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3T-9c-laM">
+                                <rect key="frame" x="313" y="78" width="54" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="noQ-8p-8yp"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="saveImpression:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="YUk-Ez-IPz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -88,7 +99,9 @@
                             <constraint firstItem="Ffc-3F-4L7" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="6dC-ua-elr"/>
                             <constraint firstItem="BaH-Tm-Y42" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="19" id="86E-22-T6f"/>
                             <constraint firstItem="Ffc-3F-4L7" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="12" id="AtB-pw-q5G"/>
+                            <constraint firstItem="I3T-9c-laM" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="19" id="CLB-Xt-WoN"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="EZf-1Q-w33" secondAttribute="trailing" id="Go4-cI-Uhm"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="I3T-9c-laM" secondAttribute="trailing" constant="26" id="TZR-Uw-QEx"/>
                             <constraint firstItem="EZf-1Q-w33" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="UHe-Ln-z4F"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="EZf-1Q-w33" secondAttribute="bottom" id="UbM-ah-XnY"/>
                             <constraint firstItem="EZf-1Q-w33" firstAttribute="top" secondItem="Ffc-3F-4L7" secondAttribute="bottom" constant="22" id="ex3-5U-e5D"/>
@@ -97,6 +110,7 @@
                     <connections>
                         <outlet property="projectNameLabel" destination="Ffc-3F-4L7" id="Meh-b6-2P9"/>
                         <outlet property="questionTableView" destination="EZf-1Q-w33" id="mcV-O2-pvK"/>
+                        <outlet property="saveButton" destination="I3T-9c-laM" id="mdT-Dl-c7m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
