--- a/Teamply/Teamply/Screen/Box/Impression/Impression.storyboard
+++ b/Teamply/Teamply/Screen/Box/Impression/Impression.storyboard
@@ -69,7 +69,7 @@
                                                 <constraint firstItem="PhG-VV-7q3" firstAttribute="leading" secondItem="LvX-Bl-Y2d" secondAttribute="leadingMargin" id="Myk-Ar-eqq"/>
                                                 <constraint firstItem="PhG-VV-7q3" firstAttribute="top" secondItem="LvX-Bl-Y2d" secondAttribute="topMargin" id="aHc-03-N4Z"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="2LH-qy-65k" secondAttribute="trailing" id="jjz-lK-EQ9"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="2LH-qy-65k" secondAttribute="bottom" id="sT7-4d-0k9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="2LH-qy-65k" secondAttribute="bottom" priority="999" id="sT7-4d-0k9"/>
                                                 <constraint firstItem="2LH-qy-65k" firstAttribute="leading" secondItem="LvX-Bl-Y2d" secondAttribute="leadingMargin" id="z3p-Lf-emL"/>
                                             </constraints>
                                         </tableViewCellContentView>
